<resources>
    <string name="app_name">Banco-Calamo</string>
    <string name="inicio">Log in</string>
    <string name="obligatorioUser">Required</string>
    <string name="btn_salir">Exit</string>
    <string name="btn_entrar">Enter</string>
    <string name="requiredPass">Required</string>
    <string name="requiredUser">Required</string>
    <string name="text_pass">Password</string>
    <string name="log_in">Log in</string>
    <string name="hint_user">User</string>
    <string name="hint_pass">Password</string>
    <string name="helper_user">Required</string>
    <string name="btn_enter">Enter</string>
    <string name="btn_text_enter">Enter</string>
    <string name="btn_text_exit">Exit</string>
    <string name="saludo">Welcome</string>
    <string name="action_settings">Settings</string>
    <string name="add_task">Inicio</string>
    <string name="btn_pos_global">GLOBAL</string>
    <string name="btn_movimientos">MOVEMENTS</string>
    <string name="btn_transferencias">TRANSFERS</string>
    <string name="btn_cambiar_pass">CHANGE PASSWORD</string>
    <string name="btn_promociones">PROMOTIONS</string>
    <string name="btn_cajeros">CASHIERS</string>
    <string name="btn_text_salir">EXIT</string>
    <string name="text_welcome">Welcome to my bank</string>
    <string name="btn_entrar_mayus">ENTER</string>
    <string name="tie_oldpass">Old password</string>
    <string name="tie_newpass">New password</string>
    <string name="tie_repeatpass">Repeat password</string>
    <string name="btn_chng_passwd">Change password</string>
    <string name="ti_user">DNI not valid</string>
    <string name="dni_empty">There must be a DNI</string>
    <string name="new_pass">The password must match </string>
    <string name="txt_transfer">Transfers</string>
    <string name="rButton_text1">My account</string>
    <string name="rButton_text2">Other account</string>
    <string name="chk_justificante">Send proof</string>
    <string name="txt_btn_enviar_transf">Send</string>
    <string name="txt_btn_cancelar_transf">Cancel</string>
    <string name="txt_elige_cuenta">Choose your account:</string>
    <string name="txt_cantidad">Ammount:</string>
    <string name="tie_num_cuenta_ajena">Enter the bank account</string>
    <string name="cuenta_origen">Origin account</string>
    <string name="cuenta_destino">To own account</string>
    <string name="cuenta_ajena">External account</string>
    <string name="toast_cliente_noExiste">Client does not exist on DB</string>
    <string name="txt_posicion_global">Global position</string>
    <string name="txt_cuentas">Accounts:</string>
    <string name="txt_movimientos">Movements</string>
    <string name="txt_titulo_movimientos">Select the account:</string>
    <string name="txt_ultimos_movimientos">"Last movements: "</string>
    <string name="txt_dialogo">Movement detail </string>
    <string name="txt_btn_dialogo">Accept</string>
    <string name="dialogo_linea_1">Dialog 1</string>
    <string name="dialogo_linea_2">Dialog 2</string>
    <string name="dialogo_linea_3">Dialog 3\n</string>
    <string name="dialogo_linea_4">Dialog 4</string>
    <string name="email_nav_header">contact@mibanco.com</string>
    <string name="txt_nav_header">My Bank</string>
    <string name="btn_home">HOME</string>
    <string name="btn_config">SETTINGS</string>
    <string name="btn_logout">Logout</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="titulo_toolbar">Bank App</string>
    <string name="language">Language</string>
    <string name="idiomaapp">App language</string>
    <string name="indicaridioma">Select language</string>
    <string name="multimedia">Media</string>
    <string name="titulo_media">Music</string>
    <string name="titulo_video">Welcome video</string>
    <string name="texto_musica">Don\'t listen to music while the application is running</string>
    <string name="texto_musicaOn">Listen the musica while the application is running</string>
    <string name="textovideo">Don\'t play the video when starting the app</string>
    <string name="textovideoOn">Play a video when the app is starting</string>
    <string name="txt_titulo_datos">Data</string>
    <string name="servicio_web">Web Services</string>
    <string name="datos_local">Local Data</string>
    <string name="origendatos">Data Origin</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="txt_atm">ATM</string>
    <string name="btn_list_atm">ATM LIST</string>
    <string name="btn_maps_atm">ATM MAPS</string>
    <string name="btn_add_atm">ATM ADD</string>
    <string name="txt_cajeros">Select ATM</string>
    <string name="txt_atm_list">ATM List</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>