<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">
    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/btn_home"
            android:icon="@drawable/ic_home"/>
        <item
            android:id="@+id/nav_global"
            android:title="@string/btn_pos_global"
            android:icon="@drawable/ic_settings"/>
        <item
            android:id="@+id/nav_movement"
            android:title="@string/btn_movimientos"
            android:icon="@drawable/ic_movements"/>
        <item
            android:id="@+id/nav_transfer"
            android:title="@string/btn_transferencias"
            android:icon="@drawable/ic_transfer"/>
        <item
            android:id="@+id/nav_pass"
            android:title="@string/btn_cambiar_pass"
            android:icon="@drawable/ic_pass"/>
        <item
            android:id="@+id/nav_promo"
            android:title="@string/btn_promociones"
            android:icon="@drawable/ic_promo"/>
        <item
            android:id="@+id/nav_cash"
            android:title="@string/btn_cajeros"
            android:icon="@drawable/ic_cash" />
        <item
            android:id="@+id/nav_config"
            android:title="@string/btn_config"
            android:icon="@drawable/ic_config"/>
    </group>
    <item
        android:title="">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:title="@string/btn_logout"
                android:icon="@drawable/ic_logout"/>
        </menu>
    </item>
</menu>