<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_margin_text"
            android:paddingStart="@dimen/common_padding_min"
            android:paddingTop="@dimen/common_padding_min"
            android:paddingEnd="@dimen/common_padding_min">

            <TextView
                android:id="@+id/text_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/log_in"
                android:textAppearance="@style/Widget.MaterialComponents.Button.TextButton"
                android:textSize="@dimen/text_login"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/commom_margin_default"
            android:paddingStart="@dimen/common_padding_min"
            android:paddingTop="@dimen/common_padding_min"
            android:paddingEnd="@dimen/common_padding_min"
            android:paddingBottom="@dimen/common_padding_min">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_user"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:helperText="@string/helper_user"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/commom_margin_default"
                    android:hint="@string/hint_user">

                </com.google.android.material.textfield.TextInputEditText>


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_pass"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/commom_margin_default"
                app:endIconMode="password_toggle"
                app:helperText="@string/helper_user"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/text_input_user"
                app:layout_constraintTop_toBottomOf="@id/text_input_user">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_pass"
                    android:inputType="textPassword">


                </com.google.android.material.textfield.TextInputEditText>


            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_enter"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/commom_margin_btn"
                android:layout_marginTop="@dimen/commom_margin_default"
                android:paddingStart="@dimen/common_padding_btn"
                android:paddingEnd="@dimen/common_padding_btn"
                android:text="@string/btn_text_enter"
                style="@style/EstiloBotones"
                app:layout_constraintStart_toStartOf="@+id/text_input_pass"
                app:layout_constraintTop_toBottomOf="@id/text_input_pass" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_exit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/EstiloBotones"
                android:layout_marginStart="@dimen/commom_margin_btn"
                android:layout_marginTop="@dimen/commom_margin_default"
                android:paddingStart="@dimen/common_padding_btn"
                android:paddingEnd="@dimen/common_padding_btn"
                android:text="@string/btn_text_exit"
                app:layout_constraintStart_toEndOf="@id/btn_enter"
                app:layout_constraintTop_toBottomOf="@id/text_input_pass" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>