<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activities.MovementsActivity">

    <TextView
        android:id="@+id/txt_movimientos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/txt_movimientos"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAlignment="center"
        android:layout_margin="@dimen/common_padding_min"
        android:textSize="@dimen/textview"/>

    <TextView
        android:id="@+id/txt_titulo_movimientos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/txt_titulo_movimientos"
        app:layout_constraintTop_toBottomOf="@id/txt_movimientos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/txt_movimientos"
        android:layout_margin="@dimen/padding_botones"
        android:textSize="@dimen/text_login"
        />

    <Spinner
        android:id="@+id/spinner_cuenta_movimientos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_titulo_movimientos"
        android:layout_margin="@dimen/padding_botones"
        />

    <TextView
        android:id="@+id/txt_ultimos_movimientos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/txt_ultimos_movimientos"
        app:layout_constraintTop_toBottomOf="@id/spinner_cuenta_movimientos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/padding_botones"
        android:textSize="@dimen/text_login"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_movimientos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:listitem="@layout/item_movimientos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_ultimos_movimientos"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/padding_botones"

        />

</androidx.constraintlayout.widget.ConstraintLayout>